...
    // MARK: - Payment Button
    
    let nextButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Confirmar Pagamento", for: .normal)
        button.titleLabel?.font = .systemFont(ofSize: 16, weight: .bold)
        button.accessibilityIdentifier = "payment-next-button"
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    var orderManager: OrderManager
    
...
            message: "O pagamento foi confirmado.\n\nO seu novo computador será entregue nos próximos 14 dias úteis.",
            preferredStyle: .alert
        )
        
        alertController.addAction(
            UIAlertAction(
                title: "Retornar para o Início",
                style: .default,
                handler: { _ in
                    self.navigationController?.popToRootViewController(animated: true)
                }
            )
        )
...
